@@ -1,17 +1,29 @@
 package com.gitlab.sszuev.flashcards;
 
-import com.gitlab.sszuev.flashcards.domain.*;
+import com.gitlab.sszuev.flashcards.domain.Card;
+import com.gitlab.sszuev.flashcards.domain.Dictionary;
+import com.gitlab.sszuev.flashcards.domain.EntityFactory;
+import com.gitlab.sszuev.flashcards.domain.Language;
+import com.gitlab.sszuev.flashcards.domain.Status;
 import org.mockito.Mockito;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 /**
  * Created by @ssz on 02.05.2021.
  */
 public class TestUtils {
+
+    public static Language mockLanguage(String lang, List<String> partsOfSpeech) {
+        Language res = Mockito.mock(Language.class);
+        Mockito.when(res.getID()).thenReturn(lang);
+        if (partsOfSpeech != null) {
+            Mockito.when(res.getPartsOfSpeech()).thenReturn(String.join(",", partsOfSpeech));
+        }
+        return res;
+    }
 
     public static Dictionary mockDictionary(Long id, String name) {
         Dictionary res = Mockito.mock(Dictionary.class);
@@ -35,8 +47,7 @@ public class TestUtils {
     public static Dictionary mockDictionary(Long id, String name, Language src, Language dst, Map<Status, Integer> cards) {
         Dictionary res = mockDictionary(id, name, src, dst);
         List<Card> mockCards = cards.entrySet().stream()
-                .flatMap(e -> IntStream.range(0, e.getValue()).mapToObj(x -> mockCard(e.getKey())))
-                .collect(Collectors.toList());
+                .flatMap(e -> IntStream.range(0, e.getValue()).mapToObj(x -> mockCard(e.getKey()))).toList();
         Mockito.when(res.cards()).thenAnswer(i -> mockCards.stream());
         return res;
     }
